Bug 1693019 - Set nsNntpMockChannel content disposition to inline for everything except attachments. r=rnons There's only two options for disposition. If it's not an attachment, set inline disposition to clear the previous value. We shouldn't be reusing channels like this, but apparently we are.

Differential Revision: https://phabricator.services.mozilla.com/D120141

--HG--
extra : rebase_source : 63a5433a8a7faedef1bf276ff675c83fe81ac760